--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "com.mccdev260.logger",
   "version": "1.0.0",
-  "displayName": "Text Logger",
+  "displayName": "MccDev260: Logger",
   "description": "Configurable lightweight text file logger that records basic performance info such as play session length, system spec and FPS data.\nCan be used in both the editor and builds.",
   "unity": "2019.1",
   "unityRelease": "0b5",
